Commit index css
Changing the css of the cards and fixing the name of the authors on the card

--- a/index.html
+++ b/index.html
@@ -17,19 +17,17 @@
   <h1><a>Shrek in Barbie World</a></h1>
   <nav>
     <ul>
-        <li class="filmes"><a href="extras/filmes.html">Films</a></li>
+        <li><a href="extras/filmes.html">Films</a></li>
         <li><a href="extras/imagens.html">Images</a></li>
         <li><a href="extras/curi.html">Curiosities</a></li>
     </ul>
 </nav>
-<div class="card-infoo">
   <div class="preco">
     <img src="imagens/lindo.png" alt="Creator" class="creator-icon" />
   </div>
   <div class="dias">
     <img src="imagens/icons8-shrek-48.png" alt="Creator" class="creator-icon" />
   </div>
-</div>
 </header>
 
 <div class="cardlist">
@@ -207,8 +205,8 @@
     </div>
     <hr />
     <div class="card-creator">
-      <img src="imagens/thaissa.jpeg" alt="Creator" class="creator-icon" />
-      <span>Creation of <a href="#">Thaissa Oliveira</a></span>
+      <img src="imagens/laryssa.jpeg" alt="Creator" class="creator-icon" />
+      <span>Creation of <a href="#">Laryssa Antunes</a></span>
     </div>
   </div>
 
@@ -340,8 +338,8 @@
     </div>
     <hr />
     <div class="card-creator">
-      <img src="imagens/thaissa.jpeg" alt="Creator" class="creator-icon" />
-      <span>Creation of <a href="#">Thaissa Oliveira</a></span>
+      <img src="imagens/laryssa.jpeg" alt="Creator" class="creator-icon" />
+      <span>Creation of <a href="#">Laryssa Antunes</a></span>
     </div>
   </div>
 
@@ -358,8 +356,8 @@
     </div>
     <hr />
     <div class="card-creator">
-      <img src="imagens/laryssa.jpeg" alt="Creator" class="creator-icon" />
-      <span>Creation of <a href="#">Laryssa Antunes</a></span>
+      <img src="imagens/thaissa.jpeg" alt="Creator" class="creator-icon" />
+      <span>Creation of <a href="#">Thaissa Oliveira</a></span>
     </div>
   </div>
   
@@ -398,8 +396,8 @@
     </div>
     <hr />
     <div class="card-creator">
-      <img src="imagens/laryssa.jpeg" alt="Creator" class="creator-icon" />
-      <span>Creation of <a href="#">Laryssa Antunes</a></span>
+      <img src="imagens/thaissa.jpeg" alt="Creator" class="creator-icon" />
+      <span>Creation of <a href="#">Thaissa Oliveira</a></span>
     </div>
   </div>
 </div>
