Commit index e css
Changing some phrases in the index and also making changes to the css

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
       </div>
     </div>
     <h2 class="card-title">Shrek in A Mermaid Tale Part 1</h2>
-    <p class="card-descricao">Shrek dives into an underwater adventure full of secrets and splashes.</p>
+    <p class="card-descricao">Shrek dives into an underwater adventure full of secrets.</p>
     <div class="card-info">
       <div class="preco">
         <img src="imagens/lindo.png" alt="Creator" class="creator-icon" />
@@ -219,7 +219,7 @@
       </div>
     </div>
     <h2 class="card-title">Shrek and the Three Musketeers</h2>
-    <p class="card-descricao">Shrek and his friends become musketeers to protect the kingdom.</p>
+    <p class="card-descricao">Shrek and friends become musketeers to protect the kingdom.</p>
     <div class="card-info">
       <div class="preco">
         <img src="imagens/lindo.png" alt="Creator" class="creator-icon" />
