--- a/extras/filmes.html
+++ b/extras/filmes.html
@@ -13,7 +13,7 @@
         </header>
 
         <main>
-            <h2>Filmes no Mundo de Shrek e Barbie</h2>
+            <h2>Films in the World of Shrek and Barbie</h2>
             <ul>
                 <li>Shrek Princess Charm School</li>
                 <li>Shrek in The Princess & the Pop Star</li>
@@ -30,7 +30,7 @@
                 <li>Shrek in the Nutcracker</li>
                 <li>Shrek and the Fairy Princess</li>
                 <li>Shrek in A Mermaid Tale Part 2</li>
-                <li><a href="../index.html" class="home-link">Voltar para a Página Home</a></li>
+                <li><a href="../index.html" class="home-link">Return to Home Page</a></li>
             </ul>
         </main>
 
