--- a/extras/imagens.html
+++ b/extras/imagens.html
@@ -75,7 +75,7 @@
         <div class="card-imagem"><img src="../imagens/logo.jpeg" alt="Imagem 43"></div>
         <div class="card-imagem"><img src="../imagens/logo2.jpeg" alt="Imagem 44"></div>
       </div>
-      <button class="home-button"><a href="../index.html">Voltar para a Página Home</a></button>
+      <button class="home-button"><a href="../index.html">Return to Home Page</a></button>
       <footer>
         <p>&copy; 2024 Shrek in Barbie World</p>
     </footer>
