--- a/extras/curi.html
+++ b/extras/curi.html
@@ -38,7 +38,7 @@
             </div>
 
             <ul>
-                <li><a href="../index.html" class="home-link">Voltar para a Página Home</a></li>
+                <li><a href="../index.html" class="home-link">Return to Home Page</a></li>
             </ul>
         </main>
 
